<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".LoginSignupActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/edittxt_full_name"
        android:inputType="text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/edittxt_email"
        android:inputType="textEmailAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edittxt_password"
        android:inputType="numberPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:enabled="false"/>

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_signup"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:minLines="2"
        android:textStyle="bold"
        android:gravity="bottom"/>
</LinearLayout>
